test/types/enum/lydia/use/namingConflictOtherEnum.good
namingConflictOtherEnum.chpl:4: error: Symbol a multiply defined
namingConflictOtherEnum.chpl:6: error: Symbol a multiply defined
